@@ -4,7 +4,11 @@ History of xm.booking
 1.2 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Use plone.indexer instead of the deprecated
+  registerIndexableAttribute which no longer works in Plone 4.  Added
+  dependency on plone.indexer for this, so using Plone 3.3 is
+  recommended (might still work on earlier versions).
+  [maurits]
 
 
 1.1 (2010-05-01)
